# lg-mentoring

./: .env  .gitignore  Dockerfile  Pipfile  Procfile  README.md  docker-compose-prod.yml  docker-compose.yml  heroku.yml  manage.py  pyproject.toml  requirements.in  requirements.txt
mentoring_project/: settings.py  urls.py  wsgi.py
pages/: tests.py
questions/: admin.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
questions/migrations/: 0001_initial.py  0002_auto_20190910_0410.py  0003_auto_20190910_0413.py  0004_auto_20190910_0425.py  0005_auto_20190910_1320.py  0006_auto_20190910_1322.py  0007_question_answer_text.py  0008_submission.py  0009_auto_20190911_1127.py  0010_question_is_published.py  0011_auto_20190917_0949.py  0012_question_is_anonymous.py  0013_auto_20190917_1001.py  0014_auto_20190917_1003.py  0015_question_answer_video.py  0016_alter_question_id_alter_submission_additional_notes_and_more.py  0017_alter_submission_question_1.py  0018_auto_20250717_0557.py
settings/: base.py  production.py
static/css/: base.css
static/js/: bootstrap-5.3.3.bundle.min.js
staticfiles/css/: base.css
templates/: _base.html  _messages.html  about.html  header.html  home.html
templates/account/: email_confirm.html  login.html  logout.html  password_change.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  profile.html  signup.html
templates/questions/: !question_list.html  !submission_detail.html  question_detail.html  question_filtered_list.html  question_update.html  submission_create.html
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_profile.py  0003_profile_photo.py  (+1 more)
(+8 files in other folders)
