[project]
name = "lg-mentoring"
version = "2024.11.9"
description = "A video-based mentoring program."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3",
    "crispy-bootstrap5",
    "dj-database-url",
    "django-allauth",
    "django-browser-reload",
    "django-crispy-forms",
    "django-embed-video",
    "django-filter",
    "django-storages[s3]",
    "django-upgrade",
    "django==5.1.3",
    "gunicorn",
    "pillow",
    "psycopg",
    "python-dotenv",
    "sentry-sdk",
    "whitenoise",
]
