[project]
name = "lg-mentoring"
version = "2025.07.13"
description = "A video-based mentoring program."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3",
    "crispy-bootstrap5",
    "dj-database-url",
    "django-allauth",
    "django-browser-reload",
    "django-crispy-forms",
    "django-debug-toolbar",
    "django-embed-video",
    "django-filter",
    "django-storages[s3]",
    "django-upgrade",
    "django>=5.2",
    "gunicorn",
    "pillow",
    "psycopg[binary]",
    "python-dotenv",
    "sentry-sdk",
    "whitenoise",
]
